--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-.section {
-      margin: 1rem 0;
-    }
-
 .content-container {
       max-width: 1200px;
       height: 400px;
@@ -20,5 +16,5 @@
       height: 50px;
       border: 1px solid black;
       color: black;
-      background-color: white;
+      background-color: green;
 }
