--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 .content-container {
-      max-width: 1200px;
-      height: 400px;
+      width: 100%;
+      height: 100px;
       margin: 0 auto;
-      background-color: #f8f9fa; /* Light grey background */
-      border: 1px solid #dee2e6; /* Light grey border */
-      padding: 1rem;
     }
 
 #button_box {
@@ -16,5 +13,5 @@
       height: 50px;
       border: 1px solid black;
       color: black;
-      background-color: green;
+      background-color: grey;
 }
