--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 #link_main_page {
       width: 30%;
       margin-left: 35%;
+      margin-top: 25px;
       height: 50px;
       border: 1px solid black;
       border-radius: 10px;
